Added test for labeled/unlabeled region not working
